Condições (Parte 2) + Refactoring e git commit --amend

--- a/aula09/index-ex005.html
+++ b/aula09/index-ex005.html
@@ -6,13 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First steps with DOM</title>
-    <style>
-        body {
-            background: #00f;
-            color: #fff;
-            font: normal 18pt Arial;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/style-ex005.css">
 </head>
 
 <body>
@@ -20,13 +14,7 @@
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript.</p>
     <div class="msg">Cliqui em mim</div>
-
-    <script>
-        var corpo = document.body
-        var p1 = document.getElementsByTagName("p")[1]
-        var d = document.querySelector(".msg")
-        d.style.background = "red"
-    </script>
+    <script src="assets/js/script-ex005.js"></script>
 </body>
 
 </html>
