Aula 15 – Variáveis Compostas

--- a/aula14ex/ex017/index-modelo.html
+++ b/aula14ex/ex017/index-modelo.html
@@ -15,11 +15,13 @@
 		</h1>
   </header>
   <section>
-		<label>Namber:</label>
+		<label>Number:</label>
 		<input type="number" placeholder="Enter a number">
 		<button>Generate</button>
 		<br>
-		<textarea cols="20" rows="11">multiplication table!</textarea>
+		<select size="11">
+			<option>Multiplication Table!</option>
+		</select>
   </section>
   <footer>
     <p>&copy; CursoemVideo</p>
