--- a/aula15/index.html
+++ b/aula15/index.html
@@ -5,12 +5,24 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Game of Luck</title>
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
+	<div class="container">
+		<header>
+			<h1>Game of Luck</h1>
+		</header>
+		<main>
+			<label>Enter a number from 0 to 10:</label>
+			<input type="number" placeholder="Chances Number 3">
+			<button>Check</button>
+			<div class="output">
+				output
+			</div>
+		</main>
+	</div>
 	<script src="assets/js/script.js"></script>
 </body>
 
